--- a/home.html
+++ b/home.html
@@ -56,10 +56,8 @@
       <ul class="nav navbar-nav navbar-right">
         <li><a href="#home" class="page-scroll">Home</a></li>
         <li><a href="#services-section" class="page-scroll">Services</a></li>
-        <li><a href="#works-section" class="page-scroll">Portfolio</a></li>
         <li><a href="#about-section" class="page-scroll">About</a></li>
         <li><a href="#team-section" class="page-scroll">Team</a></li>
-        <li><a href="#testimonials-section" class="page-scroll">Testimonials</a></li>
         <li><a href="#contact-section" class="page-scroll">Contact</a></li>
       </ul>
     </div>
@@ -73,7 +71,7 @@
   <div class="intro-text">
     <h1 class="wow fadeInDown"><strong><span class="color">JJ Wedding 2016</span></strong></h1>
     <p class="wow fadeInDown">a creative digital agency from New York</p>
-    <a href="#works-section" class="btn btn-default btn-lg page-scroll wow fadeInUp" data-wow-delay="200ms">Our Portfolio</a> </div>
+    <a href="#works-section" class="btn btn-default btn-lg page-scroll wow fadeInUp" data-wow-delay="200ms">Something important....!</a> </div>
 </header>
 
 <!-- Services Section -->
@@ -102,122 +100,6 @@
       <div class="col-md-3 col-sm-6 service wow fadeInUp" data-wow-delay="800ms"> <i class="fa fa-rocket"></i>
         <h4><strong>Branding</strong></h4>
         <p>Lorem ipsum dolor sit amet placerat facilisis felis mi in tempus eleifend pellentesque natoque.</p>
-      </div>
-    </div>
-  </div>
-</div>
-<!-- Portfolio Section -->
-<div id="works-section" class="text-center">
-  <div class="container"> <!-- Container -->
-    <div class="section-title wow fadeInDown">
-      <h2>Our <strong>Portfolio</strong></h2>
-      <hr>
-      <div class="clearfix"></div>
-      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis sed dapibus leo nec ornare diamcommodo nibh ante facilisis.</p>
-    </div>
-    <div class="categories">
-      <ul class="cat">
-        <li>
-          <ol class="type">
-            <li><a href="#" data-filter="*" class="active">All</a></li>
-            <li><a href="#" data-filter=".web">Web Design</a></li>
-            <li><a href="#" data-filter=".app">App Development</a></li>
-            <li><a href="#" data-filter=".branding">Branding</a></li>
-          </ol>
-        </li>
-      </ul>
-      <div class="clearfix"></div>
-    </div>
-    <div class="row">
-      <div class="portfolio-items">
-        <div class="col-sm-6 col-md-3 col-lg-3 web">
-          <div class="portfolio-item wow fadeInUp" data-wow-delay="200ms">
-            <div class="hover-bg"> <a href="#portfolioModal1" class="portfolio-link" data-toggle="modal">
-              <div class="hover-text">
-                <h4>Project Title</h4>
-                Web Design
-                <div class="clearfix"></div>
-                <i class="fa fa-plus"></i> </div>
-              <img src="img/portfolio/01.jpg" class="img-responsive" alt="Project Title"> </a> </div>
-          </div>
-        </div>
-        <div class="col-sm-6 col-md-3 col-lg-3 app">
-          <div class="portfolio-item wow fadeInUp" data-wow-delay="400ms">
-            <div class="hover-bg"> <a href="#portfolioModal2" class="portfolio-link" data-toggle="modal">
-              <div class="hover-text">
-                <h4>Project Title</h4>
-                App Development
-                <div class="clearfix"></div>
-                <i class="fa fa-plus"></i> </div>
-              <img src="img/portfolio/02.jpg" class="img-responsive" alt="Project Title"> </a> </div>
-          </div>
-        </div>
-        <div class="col-sm-6 col-md-3 col-lg-3 web">
-          <div class="portfolio-item wow fadeInUp" data-wow-delay="600ms">
-            <div class="hover-bg"> <a href="#portfolioModal3" class="portfolio-link" data-toggle="modal">
-              <div class="hover-text">
-                <h4>Project Title</h4>
-               Web Design
-                <div class="clearfix"></div>
-                <i class="fa fa-plus"></i> </div>
-              <img src="img/portfolio/03.jpg" class="img-responsive" alt="Project Title"> </a> </div>
-          </div>
-        </div>
-        <div class="col-sm-6 col-md-3 col-lg-3 web">
-          <div class="portfolio-item wow fadeInUp" data-wow-delay="800ms">
-            <div class="hover-bg"> <a href="#portfolioModal4" class="portfolio-link" data-toggle="modal">
-              <div class="hover-text">
-                <h4>Project Title</h4>
-                Web Design
-                <div class="clearfix"></div>
-                <i class="fa fa-plus"></i> </div>
-              <img src="img/portfolio/04.jpg" class="img-responsive" alt="Project Title"> </a> </div>
-          </div>
-        </div>
-        <div class="col-sm-6 col-md-3 col-lg-3 app">
-          <div class="portfolio-item wow fadeInUp" data-wow-delay="1000ms">
-            <div class="hover-bg"> <a href="#portfolioModal5" class="portfolio-link" data-toggle="modal">
-              <div class="hover-text">
-                <h4>Project Title</h4>
-                App Development
-                <div class="clearfix"></div>
-                <i class="fa fa-plus"></i> </div>
-              <img src="img/portfolio/05.jpg" class="img-responsive" alt="Project Title"> </a> </div>
-          </div>
-        </div>
-        <div class="col-sm-6 col-md-3 col-lg-3 branding">
-          <div class="portfolio-item wow fadeInUp" data-wow-delay="1200ms">
-            <div class="hover-bg"> <a href="#portfolioModal6" class="portfolio-link" data-toggle="modal">
-              <div class="hover-text">
-                <h4>Project Title</h4>
-                Branding
-                <div class="clearfix"></div>
-                <i class="fa fa-plus"></i> </div>
-              <img src="img/portfolio/06.jpg" class="img-responsive" alt="Project Title"> </a> </div>
-          </div>
-        </div>
-        <div class="col-sm-6 col-md-3 col-lg-3 branding app">
-          <div class="portfolio-item wow fadeInUp" data-wow-delay="1400ms">
-            <div class="hover-bg"> <a href="#portfolioModal7" class="portfolio-link" data-toggle="modal">
-              <div class="hover-text">
-                <h4>Project Title</h4>
-                App Development, Branding
-                <div class="clearfix"></div>
-                <i class="fa fa-plus"></i> </div>
-              <img src="img/portfolio/07.jpg" class="img-responsive" alt="Project Title"> </a> </div>
-          </div>
-        </div>
-        <div class="col-sm-6 col-md-3 col-lg-3 web">
-          <div class="portfolio-item wow fadeInUp" data-wow-delay="1600ms">
-            <div class="hover-bg"> <a href="#portfolioModal8" class="portfolio-link" data-toggle="modal">
-              <div class="hover-text">
-                <h4>Project Title</h4>
-                Web Design
-                <div class="clearfix"></div>
-                <i class="fa fa-plus"></i> </div>
-              <img src="img/portfolio/08.jpg" class="img-responsive" alt="Project Title"> </a> </div>
-          </div>
-        </div>
       </div>
     </div>
   </div>
@@ -322,33 +204,6 @@
               <li><a href="#"><i class="fa fa-twitter"></i></a></li>
               <li><a href="#"><i class="fa fa-google-plus"></i></a></li>
             </ul>
-          </div>
-        </div>
-      </div>
-    </div>
-  </div>
-</div>
-<!-- Testimonials Section -->
-<div id="testimonials-section" class="text-center">
-  <div class="container">
-    <div class="section-title wow fadeInDown">
-      <h2>What our <strong>Clients</strong> say</h2>
-      <hr>
-    </div>
-    <div class="row">
-      <div class="col-md-8 col-md-offset-2">
-        <div id="testimonial" class="owl-carousel owl-theme wow fadeInUp" data-wow-delay="200ms">
-          <div class="item">
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis sed dapibus leo nec ornare diam. Sed commodo nibh ante facilisis bibendum dolor feugiat at duis sed dapibus leo nec ornare diam.</p>
-            <p><strong>John DOE</strong>, CEO, Company.</p>
-          </div>
-          <div class="item">
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis sed dapibus leo nec ornare diam. Sed commodo nibh ante facilisis bibendum dolor feugiat at duis sed dapibus leo nec ornare diam.</p>
-            <p><strong>Jenny DOE</strong>, CEO, Company.</p>
-          </div>
-          <div class="item">
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis sed dapibus leo nec ornare diam. Sed commodo nibh ante facilisis bibendum dolor feugiat at duis sed dapibus leo nec ornare diam.</p>
-            <p><strong>John DOEn</strong>, CEO, Company.</p>
           </div>
         </div>
       </div>
