--- a/index.html
+++ b/index.html
@@ -1,1 +1,300 @@
-<h1>Hello world</h1>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+<meta charset="utf-8">
+<meta name="viewport" content="width=device-width, initial-scale=1">
+<title>JJ Wedding 2016</title>
+<meta name="description" content="">
+<meta name="author" content="">
+
+<!-- Favicons
+    ================================================== -->
+<link rel="shortcut icon" href="img/favicon.ico" type="image/x-icon">
+<link rel="apple-touch-icon" href="img/apple-touch-icon.png">
+<link rel="apple-touch-icon" sizes="72x72" href="img/apple-touch-icon-72x72.png">
+<link rel="apple-touch-icon" sizes="114x114" href="img/apple-touch-icon-114x114.png">
+
+<!-- Bootstrap -->
+<link rel="stylesheet" type="text/css"  href="css/bootstrap.css">
+<link rel="stylesheet" type="text/css" href="fonts/font-awesome/css/font-awesome.css">
+
+<!-- Slider
+    ================================================== -->
+<link href="css/owl.carousel.css" rel="stylesheet" media="screen">
+<link href="css/owl.theme.css" rel="stylesheet" media="screen">
+
+<!-- Stylesheet
+    ================================================== -->
+<link rel="stylesheet" type="text/css"  href="css/style.css">
+<link rel="stylesheet" type="text/css" href="css/animate.min.css">
+<link href='http://fonts.googleapis.com/css?family=Lato:400,700,900,300' rel='stylesheet' type='text/css'>
+<link href='http://fonts.googleapis.com/css?family=Open+Sans:400,700,800,600,300' rel='stylesheet' type='text/css'>
+<script type="text/javascript" src="js/modernizr.custom.js"></script>
+
+<!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
+<!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
+<!--[if lt IE 9]>
+      <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
+      <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
+    <![endif]-->
+</head>
+<body><div id="cont">
+<div id="preloader">
+  <div id="status"> <img src="img/preloader.gif" height="64" width="64" alt=""> </div>
+</div>
+<!-- Navigation
+    ==========================================-->
+<nav id="menu" class="navbar navbar-default navbar-fixed-top">
+  <div class="container">
+    <!-- Brand and toggle get grouped for better mobile display -->
+    <div class="navbar-header">
+      <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1"> <span class="sr-only">Toggle navigation</span> <span class="icon-bar"></span> <span class="icon-bar"></span> <span class="icon-bar"></span> </button>
+      <a class="navbar-brand" href="home.html"><i class="fa fa-heart-o"></i> JJ Wedding 2016<strong></strong></a> </div>
+
+    <!-- Collect the nav links, forms, and other content for toggling -->
+    <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+      <ul class="nav navbar-nav navbar-right">
+        <li><a href="#home" class="page-scroll dymo"><span>|Hem|</span></a></li>
+        <li><a href="#services-section" class="page-scroll dymo"><span>|Bröllopsdagen|</span></a></li>
+        <li><a href="#team-section1" class="page-scroll dymo"><span>|Hitta|hit|</span></a></li>
+        <li><a href="#team-section2" class="page-scroll dymo"><span>|Boende|</span></a></li>
+        <li><a href="#team-section3" class="page-scroll dymo"><span>|Viktig|info|</span></a></li>
+      </ul>
+    </div>
+    <!-- /.navbar-collapse -->
+  </div>
+  <!-- /.container-fluid -->
+</nav>
+
+<!-- Header -->
+<header class="text-center" name="home">
+  <div class="intro-text">
+    <h2 class="wow fadeInDown">Jennifer <i class="fa fa-heart fa-heart-small"></i> Jonas</h2>
+    <p class="dymo wow fadeInDown">|11|juni|2016| |Öregrund|</p>
+    <!--<a href="#about-section" class="btn btn-default btn-lg page-scroll wow fadeInUp" data-wow-delay="200ms">Something important....!</a> -->
+  </div>
+</header>
+
+<!-- Services Section -->
+<div id="services-section" class="text-center">
+  <div class="container">
+    <div class="section-title wow fadeInDown">
+      <h2>|Bröllopsdagen|</h2>
+      <div class="clearfix"></div>
+    </div>
+    <div class="row">
+      <div class="col-md-1 col-sm-12"></div>
+      <div class="col-md-5 col-sm-12">
+        <div class="service wow fadeInUp text-left" data-wow-delay="200ms">
+          <h3><i class="fa fa-bank"></i> Vigsel</h3>
+          <p>Vigseln äger rum lördagen den 11 juni kl. xx.xx i Öregrunds kyrka. Öregrunds kyrka uppfördes i slutet av 1400-talet och är helgad åt S:t Gertrud.</p>
+        </div>
+        <div class="clearfix"></div>
+        <div class="service wow fadeInUp text-left" data-wow-delay="400ms">
+          <h3><i class="fa fa-cutlery"></i> Middag</h3>
+          <p>Efter vigseln bjuds det in till middag och en hejdundrande fest i Societetshuset som ligger ett stenkast från kyrkan. Ingen bilkörning är därför nödvändig, eller ens rekommenderad, förrän ni avser lämna staden.</p>
+        </div>
+      </div>
+      <div class="col-md-5 col-sm-12">
+        <div class="service wow fadeInUp text-left" data-wow-delay="600ms">
+          <h3><i class="fa fa-users"></i> Fest</h3>
+          <p>Som gamla Uppsalastudenter är brudparet vana vid att festligheterna på nation slutade redan kl. 01.00. Detsamma gäller även på Societetshuset. Då tidigare hyresgäster högljutt festat loss in på småtimmarna har damerna och herrarna i bygdeföreningens styrelse beslutat att dra ur proppen kl. 01.00.</p>
+          <p>Men... det har väl aldrig hindrat den festglade? För den som vill fortsätter kalaset i sommarnatten på valfri klipphäll.</p>
+        </div>
+      </div>
+      <div class="col-md-1 col-sm-12"></div>
+    </div>
+  </div>
+</div>
+
+<!-- Services Section -->
+<div class="bg-section" >
+</div>
+
+<!-- Team Section -->
+<div id="team-section1" class="team-section text-center">
+  <div class="container">
+    <div class="section-title wow fadeInDown">
+      <h2>|Hitta|hit|</h2>
+      <!--<div class="clearfix"></div>-->
+    </div>
+
+    <div class="embed-container maps wow fadeInDown" data-wow-delay="200ms">
+      <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d686618.1863713152!2d17.26730346550187!3d59.54936562915603!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x46606b9c93981485%3A0xb5316e9dda354f57!2s%C3%96regrunds+kyrka!5e0!3m2!1ssv!2sse!4v1451512101597" width="900" height="300" frameborder="0" style="border:0;margin-bottom:30px;" allowfullscreen></iframe>
+    </div>
+
+    <div class="row">
+      <div class="col-md-4 col-sm-12 service wow fadeInUp" data-wow-delay="200ms"> <i class="fa fa-car"></i>
+        <h4><strong>Från Stockholm</strong></h4>
+        <p>Drygt 15 mil nordost om Stockholm. Karta och vägbeskrivning hittar du <a href="http://valte.ch/stockholm-oregrund" target="_blank"><strong>här.</strong></a></p>
+      </div>
+      <div class="col-md-4 col-sm-12 service wow fadeInUp" data-wow-delay="400ms"> <i class="fa fa-car"></i>
+        <h4><strong>Från Uppsala</strong></h4>
+        <p>Drygt 8 mil nordost om Uppsala. Karta och vägbeskrivning hittar du <a href="http://valte.ch/uppsala-oregrund" target="_blank"><strong>här.</strong></a></p>
+      </div>
+      <div class="col-md-4 col-sm-12 service wow fadeInUp" data-wow-delay="600ms"> <i class="fa fa-bus"></i>
+        <h4><strong>Allmän kommunikation</strong></h4>
+        <p>Buss 811 från Uppsala till Öregrund.<br />Anslutningståg från Stockholm.</p>
+      </div>
+    </div>
+  </div>
+</div>
+
+<!-- Services Section -->
+<div class="bg-section" >
+</div>
+
+<!-- Team Section -->
+<div id="team-section2" class="team-section text-center">
+  <div class="container">
+    <div class="section-title wow fadeInDown">
+      <h2>|Boende|</h2>
+      <div class="clearfix"></div>
+    </div>
+
+    <div class="row">
+      <div class="col-md-1 col-sm-12"></div>
+      <div class="col-md-5 col-sm-12 service wow fadeInUp text-left" data-wow-delay="200ms">
+        <img src="img/living.jpg" class="img-responsive" />
+      </div>
+      <div class="col-md-5 col-sm-12 service wow fadeInUp text-left" data-wow-delay="400ms">
+        <p>
+          Det finns flera trevliga övernattningsmöjligheter i olika prisklasser att välja mellan i Öregrund.
+          Vi har lagt in en preliminärbokning åt er gäster på <em>Strandhotellet</em>. Ange att ni tillhör vårt
+          bröllopssällskap om ni bokar rum hos dem <em>(för er som stannar två nätter så ska man få 10% rabatt)</em>. De bokade rummen släpps två månader innan bröllopet, så passa på att
+          boka innan dess om ni vill vara säkra på att få rum.
+        </p>
+        <p>
+          Strandhotellet, Hotell Floras Trädgård och Klockar-gården ligger centralt i Öregrund och på promenadavstånd
+          till både kyrkan och Societetshuset.</p>
+        <p>
+          Vill man tälta finns ledig gräsmatta vid <a href="http://valte.ch/stugan-oregrund"><strong>stugan</strong></a>!
+        </p>
+      </div>
+      <div class="col-md-1 col-sm-12"></div>
+    </div>
+    <br />
+    <br />
+
+    <div class="row">
+      <div class="col-md-1 col-sm-12"></div>
+      <div class="col-md-3 col-sm-12 service wow fadeInDown text-left" data-wow-delay="200ms">
+        <h2 class="dymo" style="font-size: 30px">|Hotell|</h2>
+        <p><a href="http://www.strandhotellet.nu/">Strandhotellet (56 bäddar).</a><br/>
+          Adress: Västergatan 1<br/>
+          Telefon: <a href="tel:0173-316 00">0173-31600</a>
+        </p>
+        <p><a href="http://www.klockargardenoregrund.se/">Klockargården (25 bäddar)</a><br/>
+          Adress: Långgatan 33<br/>
+          Telefon: <a href="tel:0173-30065">0173-30065</a>
+        </p>
+      </div>
+      <div class="col-md-3 col-sm-12 service wow fadeInDown text-left" data-wow-delay="400ms">
+        <h2 style="font-size: 30px" class="dymo">|Pensionat|</h2>
+        <p><a href="http://www.hotellflora.se/">Hotell Floras Trädgård (16 bäddar)</a><br/>
+          Adress: Västergatan 20<br/>
+          Telefon: <a href="tel:0173-316 60">0173-31660</a>
+        </p>
+        <p><a href="http://www.ankargarden.se/">Ankargården (43 bäddar)</a><br/>
+          Adress: Telegrafvägen 12<br/>
+          Telefon: <a href="tel:0173-30512">0173-30512</a>
+        </p>
+        <p><a href="http://www.uddensbb.se/">Uddens B&B (3 bäddar)</a><br/>
+          Adress: Tullportsgränd 5<br/>
+          Telefon: <a href="tel:0173-30220">0173-30220</a>
+        </p>
+      </div>
+      <div class="col-md-4 col-sm-12 service wow fadeInDown text-left" data-wow-delay="600ms">
+        <h2 style="font-size: 30px" class="dymo">|Vandrarhem|och|Camping|</h2>
+        <p><a href="http://www.epokgarden.se/">Epokgården vandrarhem (17 bäddar)</a><br/>
+          Adress: Rådhusgatan 16<br/>
+          Telefon: <a href="tel:0173-302 00">0173-30200, 0708-365252</a>
+        </p>
+        <p><a href="http://www.bokajak.se/">Öregrund Bo och Kajak, camping och stugor</a><br/>
+          Adress: Lugnetvägen 1<br/>
+          Telefon: <a href="tel:070-2805442">070-2805442</a>
+        </p>
+        <p><a href="http://www.sunnanocamping.com/">Sunnanö Camping, camping och stugor</a><br/>
+          Adress: Arats Väg 27<br/>
+          Telefon: <a href="tel:0173-30064">0173-30064</a>
+        </p>
+      </div>
+      <div class="col-md-1 col-sm-12"></div>
+    </div>
+  </div>
+</div>
+
+<!-- Services Section -->
+<div class="bg-section" >
+</div>
+
+<!-- Team Section -->
+<div id="team-section3" class="team-section text-center">
+  <div class="container">
+    <div class="section-title wow fadeInDown">
+      <h2>|Viktig|info|</h2>
+      <div class="clearfix"></div>
+    </div>
+    <div class="row">
+      <div class="col-md-1 col-sm-12"></div>
+      <div class="col-md-5 col-sm-12 service wow fadeInDown text-left" data-wow-delay="200ms">
+        <h2 style="font-size: 30px" class="dymo"><i class="fa fa-mobile"></i>|O.S.A.|</h2>
+        <p>O.S.A senaste den <strong>30 april</strong> till XXX och ange då följande:</p>
+        <ul>
+          <li>om ni har speciella allergier eller önskemål när det gäller mat och dryck</li>
+          <li>två av era bästa partylåtar till kvällen</li>
+        </ul>
+
+        <p>I god tid innan bröllopet vill vi även att ni meddelar toastmaster Gabriel Paulsson om eventuella tal på xxxxxx eller på xxxxxxxx. Han kan även
+          svara på om ni har andra funderingar. Ni är självklart också välkomna att höra av er till oss.</p>
+
+        <p>Vi tycker jättemycket om era barn, som ni såklart vet, men kvällen önskar vi fira i vuxnas sällskap. Bebisar
+          som ammas är givetvis välkomna.</p>
+
+        <p>Töm spargrisen. Efter bröllopsmiddagen öppnar baren, där varje enhet kostar xx pix.</p>
+      </div>
+      <div class="col-md-5 col-sm-12 service wow fadeInDown text-left" data-wow-delay="400ms">
+        <h2 style="font-size: 30px" class="dymo"><i class="fa fa-list"></i>|Önskelista|</h2>
+        <p>Det finaste vi kan få är att fira vår stora dag i ert sällskap.
+          Vi uppskattar att ni tar er tiden att resa till Öregrund för vår skull. Vi har hunnit samla på oss prylar och
+          det mesta som
+          hör hemmet till under våra år tillsammans.</p>
+
+        <p>Om ni ändå önskar ge något så är ett litet bidrag till vår bröllopsresa välkommet. Vill ni hellre ge något
+          annat, så har
+          vår xxx tips på sådant som vi önskar oss.</p>
+      </div>
+      <div class="col-md-1 col-sm-12"></div>
+    </div>
+  </div>
+</div>
+
+
+ <!--Services Section -->
+<!--<div class="bg-section" ></div>-->
+
+
+<div id="footer">
+  <div class="container">
+      <p>JJ Wedding 2016</p>
+  </div>
+</div>
+
+<!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
+<script type="text/javascript" src="js/jquery.1.11.1.js"></script>
+<!-- Include all compiled plugins (below), or include individual files as needed -->
+<script type="text/javascript" src="js/bootstrap.js"></script>
+<script type="text/javascript" src="js/SmoothScroll.js"></script>
+<script type="text/javascript" src="js/wow.min.js"></script>
+<script type="text/javascript" src="js/jquery.prettyPhoto.js"></script>
+<script type="text/javascript" src="js/jquery.isotope.js"></script>
+<script type="text/javascript" src="js/jqBootstrapValidation.js"></script>
+<script type="text/javascript" src="js/contact_me.js"></script>
+<script type="text/javascript" src="js/owl.carousel.js"></script>
+
+<!-- Javascripts
+    ================================================== -->
+<script type="text/javascript" src="js/main.js"></script>
+</body>
+</html>
