Texts plus design

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
       <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
     <![endif]-->
 </head>
-<body><div id="cont">
+<body><div id="bg-container">
 <div id="preloader">
   <div id="status"> <img src="img/preloader.gif" height="64" width="64" alt=""> </div>
 </div>
@@ -55,10 +55,10 @@
     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
       <ul class="nav navbar-nav navbar-right">
         <li><a href="#home" class="page-scroll dymo"><span>|Hem|</span></a></li>
-        <li><a href="#services-section" class="page-scroll dymo"><span>|Bröllopsdagen|</span></a></li>
-        <li><a href="#team-section1" class="page-scroll dymo"><span>|Hitta|hit|</span></a></li>
-        <li><a href="#team-section2" class="page-scroll dymo"><span>|Boende|</span></a></li>
-        <li><a href="#team-section3" class="page-scroll dymo"><span>|Viktig|info|</span></a></li>
+        <li><a href="#theday-section" class="page-scroll dymo"><span>|Dagen|</span></a></li>
+        <li><a href="#location-section" class="page-scroll dymo"><span>|Hitta|hit|</span></a></li>
+        <li><a href="#living-section" class="page-scroll dymo"><span>|Boende|</span></a></li>
+        <li><a href="#practicals-section" class="page-scroll dymo"><span>|Praktiska|</span></a></li>
       </ul>
     </div>
     <!-- /.navbar-collapse -->
@@ -71,56 +71,75 @@
   <div class="intro-text">
     <h2 class="wow fadeInDown">Jennifer <i class="fa fa-heart fa-heart-small"></i> Jonas</h2>
     <p class="dymo wow fadeInDown">|11|juni|2016| |Öregrund|</p>
-    <!--<a href="#about-section" class="btn btn-default btn-lg page-scroll wow fadeInUp" data-wow-delay="200ms">Something important....!</a> -->
   </div>
 </header>
 
 <!-- Services Section -->
-<div id="services-section" class="text-center">
+<div id="theday-section" class="services-section text-center">
   <div class="container">
     <div class="section-title wow fadeInDown">
       <h2>|Bröllopsdagen|</h2>
       <div class="clearfix"></div>
     </div>
-    <div class="row">
-      <div class="col-md-1 col-sm-12"></div>
-      <div class="col-md-5 col-sm-12">
-        <div class="service wow fadeInUp text-left" data-wow-delay="200ms">
-          <h3><i class="fa fa-bank"></i> Vigsel</h3>
-          <p>Vigseln äger rum lördagen den 11 juni kl. xx.xx i Öregrunds kyrka. Öregrunds kyrka uppfördes i slutet av 1400-talet och är helgad åt S:t Gertrud.</p>
+    <div class="row vertical-aligned-md">
+      <div class="col-md-6 col-sm-12">
+        <img src="img/we2.jpg" class="img-responsive img-centered img-rounded" style="margin-bottom: 20px;" />
+      </div>
+
+      <div class="col-md-6 col-sm-12 wow fadeInUp " data-wow-delay="600ms">
+        <div class="row vertical-aligned wow fadeInUp " data-wow-delay="200ms">
+          <div class="col-md-1 col-xs-1">
+            <h3 class="dymo"><i class="fa fa-bank"></i></h3>
+          </div>
+          <div class="col-md-11 col-xs-11 service text-left">
+            <p class="dymo-inline" style="margin-bottom: 0;"><span class="dymo">|Vigsel|</span> - Vigseln äger rum lördagen den 11 juni kl. xx.xx i Öregrunds kyrka. Öregrunds kyrka uppfördes i slutet av 1400-talet och är helgad åt S:t Gertrud.</p>
+          </div>
         </div>
-        <div class="clearfix"></div>
-        <div class="service wow fadeInUp text-left" data-wow-delay="400ms">
-          <h3><i class="fa fa-cutlery"></i> Middag</h3>
-          <p>Efter vigseln bjuds det in till middag och en hejdundrande fest i Societetshuset som ligger ett stenkast från kyrkan. Ingen bilkörning är därför nödvändig, eller ens rekommenderad, förrän ni avser lämna staden.</p>
+
+        <div class="row  vertical-aligned wow fadeInUp " data-wow-delay="400ms">
+          <div class="col-md-1 col-xs-1">
+            <h3 class="dymo"><i class="fa fa-cutlery"></i></h3>
+          </div>
+          <div class="col-md-11 col-xs-11 service text-left">
+            <p class="dymo-inline" style="margin-bottom: 0;"><span class="dymo">|Middag|</span> - Efter vigseln bjuds det in till middag och en hejdundrande fest i Societetshuset som ligger ett stenkast från kyrkan. Ingen bilkörning är därför nödvändig, eller ens rekommenderad, förrän ni avser lämna staden.</p>
+          </div>
+        </div>
+
+        <div class="row  vertical-aligned">
+          <div class="col-md-1 col-xs-1">
+            <h3 class="dymo"><i class="fa fa-users"></i></h3>
+          </div>
+          <div class="col-md-11 col-xs-11 service text-left">
+            <p class="dymo-inline" style="margin-bottom: 0;"><span class="dymo">|Fest|</span> - Som gamla Uppsalastudenter är brudparet vana vid att festligheterna på nation slutade redan kl. 01.00. Detsamma gäller även på Societetshuset. Då tidigare hyresgäster högljutt festat loss in på småtimmarna har damerna och herrarna i bygdeföreningens styrelse beslutat att dra ur proppen kl. 01.00.</p>
+          </div>
+        </div>
+        <div class="row  vertical-aligned">
+          <div class="col-md-1 col-xs-1">
+            <h3 class="dymo"><i class="fa fa-users" style="color: transparent"></i></h3>
+          </div>
+          <div class="col-md-11 col-xs-11 service text-left">
+            <p class="dymo-inline" style="margin-bottom: 0;">Men... det har väl aldrig hindrat den festglade? För den som vill fortsätter kalaset i sommarnatten på valfri klipphäll.</p>
+          </div>
         </div>
       </div>
-      <div class="col-md-5 col-sm-12">
-        <div class="service wow fadeInUp text-left" data-wow-delay="600ms">
-          <h3><i class="fa fa-users"></i> Fest</h3>
-          <p>Som gamla Uppsalastudenter är brudparet vana vid att festligheterna på nation slutade redan kl. 01.00. Detsamma gäller även på Societetshuset. Då tidigare hyresgäster högljutt festat loss in på småtimmarna har damerna och herrarna i bygdeföreningens styrelse beslutat att dra ur proppen kl. 01.00.</p>
-          <p>Men... det har väl aldrig hindrat den festglade? För den som vill fortsätter kalaset i sommarnatten på valfri klipphäll.</p>
-        </div>
-      </div>
-      <div class="col-md-1 col-sm-12"></div>
     </div>
   </div>
 </div>
+
 
 <!-- Services Section -->
 <div class="bg-section" >
 </div>
 
 <!-- Team Section -->
-<div id="team-section1" class="team-section text-center">
+<div id="location-section" class="team-section text-center">
   <div class="container">
     <div class="section-title wow fadeInDown">
       <h2>|Hitta|hit|</h2>
-      <!--<div class="clearfix"></div>-->
     </div>
 
     <div class="embed-container maps wow fadeInDown" data-wow-delay="200ms">
-      <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d686618.1863713152!2d17.26730346550187!3d59.54936562915603!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x46606b9c93981485%3A0xb5316e9dda354f57!2s%C3%96regrunds+kyrka!5e0!3m2!1ssv!2sse!4v1451512101597" width="900" height="300" frameborder="0" style="border:0;margin-bottom:30px;" allowfullscreen></iframe>
+      <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d686618.1863713152!2d17.26730346550187!3d59.54936562915603!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x46606b9c93981485%3A0xb5316e9dda354f57!2s%C3%96regrunds+kyrka!5e0!3m2!1ssv!2sse!4v1451512101597" frameborder="0" style="border:0;margin-bottom:30px;width:100%;height:300px;" allowfullscreen></iframe>
     </div>
 
     <div class="row">
@@ -145,19 +164,18 @@
 </div>
 
 <!-- Team Section -->
-<div id="team-section2" class="team-section text-center">
+<div id="living-section" class="team-section text-center">
   <div class="container">
     <div class="section-title wow fadeInDown">
       <h2>|Boende|</h2>
       <div class="clearfix"></div>
     </div>
 
-    <div class="row">
-      <div class="col-md-1 col-sm-12"></div>
-      <div class="col-md-5 col-sm-12 service wow fadeInUp text-left" data-wow-delay="200ms">
-        <img src="img/living.jpg" class="img-responsive" />
+    <div class="row vertical-aligned-md">
+      <div class="col-md-5 col-sm-12 col-xs-12 service wow fadeInUp text-left" data-wow-delay="200ms">
+        <img src="img/living.jpg" class="img-responsive img-centered img-rounded" style="margin-bottom: 20px;"/>
       </div>
-      <div class="col-md-5 col-sm-12 service wow fadeInUp text-left" data-wow-delay="400ms">
+      <div class="col-md-7 col-sm-12 col-xs-12 service wow fadeInUp text-left" data-wow-delay="400ms">
         <p>
           Det finns flera trevliga övernattningsmöjligheter i olika prisklasser att välja mellan i Öregrund.
           Vi har lagt in en preliminärbokning åt er gäster på <em>Strandhotellet</em>. Ange att ni tillhör vårt
@@ -171,14 +189,10 @@
           Vill man tälta finns ledig gräsmatta vid <a href="http://valte.ch/stugan-oregrund"><strong>stugan</strong></a>!
         </p>
       </div>
-      <div class="col-md-1 col-sm-12"></div>
     </div>
-    <br />
-    <br />
 
     <div class="row">
-      <div class="col-md-1 col-sm-12"></div>
-      <div class="col-md-3 col-sm-12 service wow fadeInDown text-left" data-wow-delay="200ms">
+      <div class="col-md-4 col-sm-6 col-xs-12 service wow fadeInDown text-left" data-wow-delay="200ms">
         <h2 class="dymo" style="font-size: 30px">|Hotell|</h2>
         <p><a href="http://www.strandhotellet.nu/">Strandhotellet (56 bäddar).</a><br/>
           Adress: Västergatan 1<br/>
@@ -189,7 +203,7 @@
           Telefon: <a href="tel:0173-30065">0173-30065</a>
         </p>
       </div>
-      <div class="col-md-3 col-sm-12 service wow fadeInDown text-left" data-wow-delay="400ms">
+      <div class="col-md-4 col-sm-6 col-xs-12 service wow fadeInDown text-left" data-wow-delay="400ms">
         <h2 style="font-size: 30px" class="dymo">|Pensionat|</h2>
         <p><a href="http://www.hotellflora.se/">Hotell Floras Trädgård (16 bäddar)</a><br/>
           Adress: Västergatan 20<br/>
@@ -219,7 +233,6 @@
           Telefon: <a href="tel:0173-30064">0173-30064</a>
         </p>
       </div>
-      <div class="col-md-1 col-sm-12"></div>
     </div>
   </div>
 </div>
@@ -229,38 +242,39 @@
 </div>
 
 <!-- Team Section -->
-<div id="team-section3" class="team-section text-center">
+<div id="practicals-section" class="team-section text-center">
   <div class="container">
     <div class="section-title wow fadeInDown">
-      <h2>|Viktig|info|</h2>
+      <h2>|Det|Praktiska|</h2>
       <div class="clearfix"></div>
     </div>
     <div class="row">
       <div class="col-md-1 col-sm-12"></div>
       <div class="col-md-5 col-sm-12 service wow fadeInDown text-left" data-wow-delay="200ms">
-        <h2 style="font-size: 30px" class="dymo"><i class="fa fa-mobile"></i>|O.S.A.|</h2>
-        <p>O.S.A senaste den <strong>30 april</strong> till XXX och ange då följande:</p>
-        <ul>
-          <li>om ni har speciella allergier eller önskemål när det gäller mat och dryck</li>
-          <li>två av era bästa partylåtar till kvällen</li>
-        </ul>
+        <p class="dymo-inline"><span class="dymo">|O.S.A.|</span> - O.S.A senaste den <strong>30 mars</strong> till XXX på telefon XXX
+          och berätta då om ni har några speciella allergier eller önskemål när det gäller mat och dryck.</p>
 
-        <p>I god tid innan bröllopet vill vi även att ni meddelar toastmaster Gabriel Paulsson om eventuella tal på xxxxxx eller på xxxxxxxx. Han kan även
-          svara på om ni har andra funderingar. Ni är självklart också välkomna att höra av er till oss.</p>
+        <p class="dymo-inline"><span class="dymo">|Tal|</span> - I god tid innan bröllopet vill vi även att ni meddelar
+          toastmaster Gabriel Tiste om eventuella tal. Han kan även svara på andra funderingar som ni har. Självklart är
+          ni också välkomna att höra av er till oss. Kontaktuppgifter till Gabriel hittar ni <a href="#team-section" class="page-scroll">här</a>.</p>
 
-        <p>Vi tycker jättemycket om era barn, som ni såklart vet, men kvällen önskar vi fira i vuxnas sällskap. Bebisar
-          som ammas är givetvis välkomna.</p>
+        <p class="dymo-inline"><span class="dymo">|Musik|</span> - Maila tre av era bästa partylåtar för kvällen till musik@smarr.se.</p>
 
-        <p>Töm spargrisen. Efter bröllopsmiddagen öppnar baren, där varje enhet kostar xx pix.</p>
+        <p class="dymo-inline"><span class="dymo">|Barn|</span> - Vi tycker jättemycket om era barn, som ni såklart vet,
+          men kvällen önskar vi fira i vuxnas sällskap. Bebisar som ammas är givetvis välkomna.</p>
       </div>
       <div class="col-md-5 col-sm-12 service wow fadeInDown text-left" data-wow-delay="400ms">
-        <h2 style="font-size: 30px" class="dymo"><i class="fa fa-list"></i>|Önskelista|</h2>
-        <p>Det finaste vi kan få är att fira vår stora dag i ert sällskap.
+        <p class="dymo-inline"><span class="dymo">|Bar|</span> - Töm spargrisen. Efter bröllopsmiddagen öppnar baren, där
+          självkostnadspris gäller.</p>
+
+        <p class="dymo-inline"><span class="dymo">|Klädkod|</span> - Kavaj (valfri färg).</p>
+
+        <p class="dymo-inline"><span class="dymo">|Önskelista|</span> - Det finaste vi kan få är att fira vår stora dag i ert sällskap.
           Vi uppskattar att ni tar er tiden att resa till Öregrund för vår skull. Vi har hunnit samla på oss prylar och
           det mesta som
           hör hemmet till under våra år tillsammans.</p>
 
-        <p>Om ni ändå önskar ge något så är ett litet bidrag till vår bröllopsresa välkommet. Vill ni hellre ge något
+        <p class="dymo-inline">Om ni ändå önskar ge något så är ett litet bidrag till vår bröllopsresa välkommet. Vill ni hellre ge något
           annat, så har
           vår xxx tips på sådant som vi önskar oss.</p>
       </div>
@@ -268,11 +282,6 @@
     </div>
   </div>
 </div>
-
-
- <!--Services Section -->
-<!--<div class="bg-section" ></div>-->
-
 
 <div id="footer">
   <div class="container">
